[update] haproxy.cfg

--- a/haproxy/haproxy.cfg
+++ b/haproxy/haproxy.cfg
@@ -11,7 +11,9 @@ defaults
 frontend http-in
     bind *:80
     acl is_api path_beg /api/
+    acl is_stats path_beg /stats
     use_backend backend if is_api
+    use_backend stats_backend if is_stats
     default_backend frontend
 
 backend frontend
@@ -19,3 +21,8 @@ backend frontend
 
 backend backend
     server backend backend:8000
+
+backend stats_backend
+    mode http
+    stats enable
+    stats uri /stats
